--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "short-unique-id": "^5.2.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
